--- a/index.html
+++ b/index.html
@@ -1,1 +1,170 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<title>動漫主題餐廳</title>
+	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+<body>
+	<!-- navbar -->
+	<header class="container">
+		<nav>
+			<a class="logo" href="index.html">
+				<span>K's</span>
+			</a>
+			<ul>
+				<li><a href="index.html">
+					<div class="ch">首頁</div>
+					<div class="en">Home</div></a></li>
+				<li><a href="index.html">
+					<div class="ch">餐點介紹</div>
+					<div class="en">Menu</div></a></li>
+				<li><a href="index.html">
+					<div class="ch">週邊商品</div>
+					<div class="en">Products</div></a></li>
+				<li><a href="index.html">
+					<div class="ch">聯絡我們</div>
+					<div class="en">Contact</div></a></li>
+			</ul>
+			<a href="index.html" class="fb"></a>
+		</nav>
+	</header>
 
+	<!-- menu -->
+	<section>
+		<h1 class="title">菜單</h1>
+	</section>
+	<section>
+		<div class="menu">
+			<div class="col-3">
+				<img src="img/01.jpg">
+				<div>炸天婦羅蓋飯</div>
+				<div class="rating">
+					<i class="fa fa-star"></i>
+					<i class="fa fa-star"></i>
+					<i class="fa fa-star"></i>
+					<i class="fa fa-star"></i>
+					<i class="fa fa-star-o"></i>
+				</div>
+				<div>NT$290</div>
+			</div>
+
+			<div class="col-3">
+				<img src="img/02.jpg">
+				<div>炸牡蠣咖喱</div>
+				<div class="rating">
+					<i class="fa fa-star"></i>
+					<i class="fa fa-star"></i>
+					<i class="fa fa-star"></i>
+					<i class="fa fa-star-half-o"></i>
+					<i class="fa fa-star-o"></i>
+				</div>
+				<div>NT$240</div>
+			</div>
+
+			<div class="col-3">
+				<img src="img/03.jpg">
+				<div>巧克力香蕉百匯</div>
+				<div class="rating">
+					<i class="fa fa-star"></i>
+					<i class="fa fa-star"></i>
+					<i class="fa fa-star"></i>
+					<i class="fa fa-star"></i>
+					<i class="fa fa-star-half-o"></i>
+				</div>
+				<div>NT$160</div>
+			</div>
+
+			<div class="col-3">
+				<img src="img/04.jpg">
+				<div>檸檬戚風蛋糕</div>
+				<div class="rating">
+					<i class="fa fa-star"></i>
+					<i class="fa fa-star"></i>
+					<i class="fa fa-star"></i>
+					<i class="fa fa-star"></i>
+					<i class="fa fa-star-half-o"></i>
+				</div>
+				<div>NT$160</div>
+			</div>
+
+			<div class="col-3">
+				<img src="img/05.jpg">
+				<div>蜂蜜三明治</div>
+				<div class="rating">
+					<i class="fa fa-star"></i>
+					<i class="fa fa-star"></i>
+					<i class="fa fa-star"></i>
+					<i class="fa fa-star"></i>
+					<i class="fa fa-star-o"></i>
+				</div>
+				<div>NT$130</div>
+			</div>
+
+			<div class="col-3">
+				<img src="img/09.jpg">
+				<div>五層塔煎餅</div>
+				<div class="rating">
+					<i class="fa fa-star"></i>
+					<i class="fa fa-star"></i>
+					<i class="fa fa-star"></i>
+					<i class="fa fa-star"></i>
+					<i class="fa fa-star-o"></i>
+				</div>
+				<div>NT$110</div>
+			</div>
+
+			<div class="col-3">
+				<img src="img/06.jpg">
+				<div>日式紅葉饅頭</div>
+				<div class="rating">
+					<i class="fa fa-star"></i>
+					<i class="fa fa-star"></i>
+					<i class="fa fa-star"></i>
+					<i class="fa fa-star"></i>
+					<i class="fa fa-star-o"></i>
+				</div>
+				<div>NT$80</div>
+			</div>
+
+			<div class="col-3">
+				<img src="img/07.jpg">
+				<div>蓬鬆生銅鑼燒</div>
+				<div class="rating">
+					<i class="fa fa-star"></i>
+					<i class="fa fa-star"></i>
+					<i class="fa fa-star"></i>
+					<i class="fa fa-star"></i>
+					<i class="fa fa-star-o"></i>
+				</div>
+				<div>NT$80</div>
+			</div>
+
+			<div class="col-3">
+				<img src="img/08.jpg">
+				<div>蜂蜜柚子餡蜜</div>
+				<div class="rating">
+					<i class="fa fa-star"></i>
+					<i class="fa fa-star"></i>
+					<i class="fa fa-star"></i>
+					<i class="fa fa-star"></i>
+					<i class="fa fa-star-half-o"></i>
+				</div>
+				<div>NT$80</div>
+			</div>
+
+		</div>
+	</section>
+
+	<!-- footer -->
+	<section>
+		<div class="footer">
+			<h1>K's Restaurant</h1>
+			<p>電話：+886-2-83726950</p>
+			<p>地址：台中市西屯區三段</p>
+			<p>Copyright © 2021 K's Co., Ltd All Rights Reserved.</p>
+		</div>
+	</section>
+</body>
+</html>
