--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<section>
 		<div class="menu">
 			<div class="col-3">
-				<img src="/img/01.jpg">
+				<img src="https://kt-1234.github.io/img/01.jpg">
 				<div>炸天婦羅蓋飯</div>
 				<div class="rating">
 					<i class="fa fa-star"></i>
@@ -51,7 +51,7 @@
 			</div>
 
 			<div class="col-3">
-				<img src="/img/02.jpg">
+				<img src="https://kt-1234.github.io/img/02.jpg">
 				<div>炸牡蠣咖喱</div>
 				<div class="rating">
 					<i class="fa fa-star"></i>
@@ -64,7 +64,7 @@
 			</div>
 
 			<div class="col-3">
-				<img src="/img/03.jpg">
+				<img src="https://kt-1234.github.io/img/03.jpg">
 				<div>巧克力香蕉百匯</div>
 				<div class="rating">
 					<i class="fa fa-star"></i>
@@ -77,7 +77,7 @@
 			</div>
 
 			<div class="col-3">
-				<img src="/img/04.jpg">
+				<img src="https://kt-1234.github.io/img/04.jpg">
 				<div>檸檬戚風蛋糕</div>
 				<div class="rating">
 					<i class="fa fa-star"></i>
@@ -90,7 +90,7 @@
 			</div>
 
 			<div class="col-3">
-				<img src="/img/05.jpg">
+				<img src="https://kt-1234.github.io/img/05.jpg">
 				<div>蜂蜜三明治</div>
 				<div class="rating">
 					<i class="fa fa-star"></i>
@@ -103,7 +103,7 @@
 			</div>
 
 			<div class="col-3">
-				<img src="/img/09.jpg">
+				<img src="https://kt-1234.github.io/img/09.jpg">
 				<div>五層塔煎餅</div>
 				<div class="rating">
 					<i class="fa fa-star"></i>
@@ -116,7 +116,7 @@
 			</div>
 
 			<div class="col-3">
-				<img src="/img/06.jpg">
+				<img src="https://kt-1234.github.io/img/06.jpg">
 				<div>日式紅葉饅頭</div>
 				<div class="rating">
 					<i class="fa fa-star"></i>
@@ -129,7 +129,7 @@
 			</div>
 
 			<div class="col-3">
-				<img src="/img/07.jpg">
+				<img src="https://kt-1234.github.io/img/07.jpg">
 				<div>蓬鬆生銅鑼燒</div>
 				<div class="rating">
 					<i class="fa fa-star"></i>
@@ -142,7 +142,7 @@
 			</div>
 
 			<div class="col-3">
-				<img src="/img/08.jpg">
+				<img src="https://kt-1234.github.io/img/08.jpg">
 				<div>蜂蜜柚子餡蜜</div>
 				<div class="rating">
 					<i class="fa fa-star"></i>
